--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,10 @@
     "name": "people/list",
     "type": "project",
     "description": "The aplication for list people and comapany",
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "guzzlehttp/guzzle": "^7.2"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
